# simple-rust-http-server

./: .gitignore  Cargo.toml  README.md
src/: main.rs
